# maccli

./: CHANGELOG.md  Cargo.toml
.github/workflows/: main.yml
src/: main.rs
